@@ -49,6 +49,7 @@ specs/constraints/constraint_helper.rb -text
 specs/constraints/constraints.rb -text
 specs/constraints/distinct.rb -text
 specs/constraints/linear.rb -text
+specs/constraints/reification_sugar.rb -text
 specs/constraints/relation.rb -text
 specs/enum_wrapper.rb -text
 specs/int_var.rb -text
